# Document-Processing-Agent

./: .gitignore  LangGraph.ipynb  agent.ipynb  main.py  pyproject.toml  test.ipynb
gradio_tests/: test_1.py  test_2.py
src/agents/: document_processor.py  graph_state.py  main_graph.py  main_multi_file_graph.py  multi_file_processor.py  multi_file_qa.py  multi_file_state.py  multi_file_summarizer.py  qa_agent.py  summarizer.py  text_extractor.py
src/config/: settings.py
src/core/: file_handler.py  ocr_engine.py  text_processor.py
src/ui/: gradio_interface.py  multi_file_gradio_interface.py  style.css
