[project]
name = "document-processing-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "easyocr>=1.7.2",
    "gradio>=5.42.0",
    "ipykernel>=6.30.1",
    "langchain[google-genai,openai]>=0.3.27",
    "langgraph>=0.6.4",
    "langsmith>=0.4.14",
    "pdf2image>=1.17.0",
    "pymupdf>=1.26.3",
    "pytesseract>=0.3.13",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]
